# comms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
glsl/: text_frag.glsl  text_vert.glsl
src/: Alias.hpp  Data.hpp  Engine.hpp  Exec.hpp  Global.hpp  Helper.hpp  Include.hpp  Macros.hpp  Main.cpp  Taglist.hpp  View.cpp  View.hpp  main.cpp
src/Comms/: Command.hpp  Commands.hpp  Taglist.hpp
src/commands/: Async_Cmd.hpp  Bad_Cmd.hpp  Clear_Cmd.hpp  Command.hpp  Command_Route.hpp  Help_Cmd.hpp  Include.hpp  Primes_Cmd.hpp  Program.hpp  Quit_Cmd.hpp  Shutdown_Cmd.hpp  View_Cmd.hpp  Win_Cmd.hpp  Window.hpp
src/comms/: Buffer.hpp  Command.hpp  Commands.hpp  Event.hpp  Exec.hpp  Font.hpp  Prog_Win.hpp  Program.hpp  Render.hpp  Taglist.hpp  Window.hpp
src/components/: Buffer.hpp  Event.hpp  Font.hpp  Include.hpp  Pane.hpp  Print.hpp  Prog_Win.hpp  Render.hpp  Socket.hpp  VWin.hpp
src/protocol/: Include.hpp  Proto_Route.hpp  Protocol.hpp
src/protocol/fbs/: message.fbs
src/protocol/req/: Primes_Req.hpp  Shutdown_Req.hpp
src/protocol/res/: Error_Res.hpp  Primes_Res.hpp
